cluster-link/kcat.yaml
apiVersion: v1
kind: Pod
metadata:
  name: kcat
  labels:
    app: kcat
spec:
  containers:
  - name: cp-kcat
    image: confluentinc/cp-kcat:7.8.0
    command: ['sh', '-c', 'tail -f /dev/null']
